# coral

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: abis.yml  check.yml  release.yml
coral-cli/: Cargo.toml
coral-cli/abi/: GuardianModule.json  NoRestakingModule.json  PufferModule.json  PufferModuleManager.json  PufferOracle.json  PufferOracleV2.json  PufferProtocol.json  PufferVault.json  PufferVaultV2.json  RestakingOperator.json  ValidatorTicket.json  addresses.json
coral-cli/config/: cli.toml
coral-cli/docs/: README.md  cli.toml.md  guardian.md  validator-dev.md  validator.md
coral-cli/src/: main.rs
coral-cli/src/commands/: mod.rs
coral-cli/src/commands/validator/: keygen.rs  list_keys.rs  mod.rs  register_calldata.rs  register_key.rs  register_validator.rs  sign_vem.rs  verify_merkle_tree_rewards.rs  withdrawal_credentials.rs
coral-cli/src/tests/rewards-files/: rewards-test-1.json
coral-lib/: Cargo.toml
coral-lib/src/: lib.rs
coral-lib/src/error/: error_kind.rs  error_type.rs  mod.rs  server_error.rs
coral-lib/src/services/beacon/: attestation_rewards.rs  client.rs  fetch_block.rs  fetch_genesis.rs  fetch_puffer_validator_stats.rs  fetch_state_root.rs  fetch_validator.rs  fetch_validators.rs  mock_client.rs  mod.rs  submit_exit.rs
coral-lib/src/services/beacon/types/: attestation_rewards.rs  beacon_block.rs  genesis.rs  mod.rs  state_root.rs  state_root_test.rs  validator.rs  validator_balance.rs
coral-lib/src/structs/: eth_types.rs  merkle_tree.rs  merkle_tree_test.rs  mod.rs  rewards_file.rs  rewards_tree.rs
coral-lib/src/utils/: encoding.rs  ethereum.rs  mod.rs  parse.rs  serialize.rs  ssl.rs  validator.rs  wallet.rs
coral-lib/src/utils/abi/: abi_test.rs  intel_report.rs  mod.rs  rave_evidence.rs  validator_key_data.rs
docker/: Dockerfile  README.md
scripts/: install_enclave_dependencies.sh  install_secure_signer_docker.sh
scripts/utilities/: get_github_releases.sh  install_prerequisites.sh  logging_functions.sh
