[package]
name = "coral-cli"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "coral-cli"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.11"
colored = "2.1.0"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1" }

ethers = { version = "2.0.14", optional = true }

# Puffer dependencies

coral-lib = { path = "../coral-lib" }
puffersecuresigner = { git ="https://github.com/PufferFinance/secure-signer.git" }

[features]
default = []
dev = [ "ethers", "coral-lib/dev" ]