[package]
name = "coral-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
base64 = "0.21.5"
ethers = "2.0.11"
rand_core = "0.6.4"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = [ "cors", "trace" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "std", "env-filter" ] }
url = "2.5.0"

# Puffer dependencies
puffersecuresigner = { git ="https://github.com/PufferFinance/secure-signer.git" }
