[package]
name = "coral-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "coral_lib"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
hex = "0.4.3"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1" }
tracing = "0.1.40"
url = "2.5.2"

# Puffer dependencies
puffersecuresigner = { git = "https://github.com/PufferFinance/secure-signer.git" }

ethers = { version = "2.0.14", optional = true }

[features]
default = []
dev = [ "ethers" ]
